--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
        height: auto;
    }
     
-   .bg-slider {
+   .bg_slide {
     width: 100%;
     height: 100vh;
     background-position:center center;
@@ -120,7 +120,9 @@
     margin: 20px 200px 100px 200px;
 }
 
-
+.Courses{
+    background-color: #D6E5F9;
+}
     .course{
         display: block;
         background-color: #fff;
