--- a/style.css
+++ b/style.css
@@ -169,8 +169,8 @@ h2 {
 .course {
     z-index: 10;
     background-color: #fff;
-    margin: 15px;
-    padding: 60px 40px;
+    margin: 10px;
+    padding: 60px 32px;
     text-align: center;
     overflow: hidden;
     border-radius: 8px;
@@ -186,10 +186,11 @@ h2 {
     height: 132px;
     width: auto;
     padding-bottom: 48px;
+    margin-bottom: 12px;
 }
 
 .course p {
-    margin-bottom: 28px;
+    margin-bottom: 30px;
     font-size: 14px;
 }
 
@@ -197,9 +198,9 @@ h2 {
     background-color: #3F5DDA;
     color: #fff;
     margin: 2px;
-    padding: 16px 24px;
-    font-size: 12px;
-
+    padding: 14px 30px;
+    font-size: 13px;
+    border-radius: 12px;
 }
 
 #html a {
@@ -249,6 +250,7 @@ img {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    padding-bottom: 75px;
 }
 
 
@@ -268,6 +270,7 @@ img {
 .slider {
     margin: 20px auto;
     width: 80%;
+    margin-bottom: 120px;
 }
 
 .slider img {
